Fix attempt for bg on mobile About

--- a/style.css
+++ b/style.css
@@ -408,13 +408,72 @@ h6,
   width: min(400px, 80%);
   margin: 0 auto;
 }
-.intro h1 {
+.home-h1 {
   text-align: left;
   font-size: clamp(2.5rem, 14vw, 5.5rem);
   font-weight: var(--font-weight-1);
   line-height: var(--font-lineheight-00);
   letter-spacing: var(--font-letterspacing-0);
 }
+.perspective-container {
+  display: inline-block;
+  transform-style: preserve-3d;
+  perspective: 350px;
+}
+.swing-container {
+  display: inline-block;
+  position: relative;
+  line-height: .6;
+  transform-style: preserve-3d;
+  transform-origin: bottom;
+  /* animation: 1200ms cubic-bezier(0.82, 0, 0.18, 1) swing  */
+  /* animation: 1000ms ease-in swing-down, 1000ms ease-out 1200ms swing-up; */
+  animation: 
+    800ms cubic-bezier(.65, .1, .71, .21) swing-down,
+    900ms cubic-bezier(.19,.57,.3,1) 800ms swing-up;
+    /* cubic-bezier(0, 0, .65, 1) */
+}
+.swinger-back {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: #d7484b;
+  transform: translateZ(-1px);
+  z-index: -1;
+}
+.swinger {
+  display: inline-block;
+  position: relative;
+}
+@keyframes swing-down {
+  0% {
+    transform: rotateX(0deg);
+  }
+  100% {
+    transform: rotateX(-.5turn);
+  }
+}
+@keyframes swing-up {
+  0% {
+    transform: rotateX(-.5turn);
+  }
+  100% {
+    transform: rotateX(-1turn);
+  }
+}
+/* @keyframes swing {
+  from {
+    transform: rotateX(0deg);
+  }
+  50% {
+    transform: rotateX(-180deg);
+  }
+  to {
+    transform: rotateX(-360deg);
+  }
+}  */
 .headshot {
   width: min(90%, 400px);
   border-radius: 50%;
@@ -936,7 +995,9 @@ summary::-webkit-details-marker {
   position: relative;
   z-index: 0;
   background-image: url(./public/assets/sc-marsh.jpg);
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
+  position: fixed;
+  z-index: -1;
   background-position: center;
   background-size: cover;
 }
@@ -1007,6 +1068,12 @@ button:hover {
 
 /* Large Mobile Devices */
 @media (min-width: 472px) {
+  /* TODO: Check on mobile to see if making parallax frame position fixed instead of background-attachment fixed worked */
+  .parallax-frame {
+    position: relative;
+    background-attachment: fixed;
+  }
+
   .about-h2 {
     font-size: 2rem;
     line-height: 2rem;
@@ -1832,7 +1899,7 @@ button:hover {
     max-width: 1600px;
   }
   .intro .home-h1 {
-    font-size: max(7rem, 10vw);
+    font-size: min(7.25rem, 10vw);
     line-height: max(6rem, 8vw);
   }
   .intro-heading-svg-wrapper {
